fix list alignment

--- a/src/features/BusinessFundingBanner/BusinessFundingBannerContent.module.css
+++ b/src/features/BusinessFundingBanner/BusinessFundingBannerContent.module.css
@@ -34,3 +34,9 @@
     align-items: center;
     gap: 0.75rem;
 }
+
+.businessFundingBannerContentBenefitIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
